--- a/src/react/server/Text/styles.module.css
+++ b/src/react/server/Text/styles.module.css
@@ -49,6 +49,12 @@
 	& > * {
 		vertical-align: middle;
 	}
+
+	&:focus-visible {
+		outline: 2px solid var(--blue-400);
+		outline-offset: 2px;
+		border-radius: 2px;
+	}
 }
 
 @media (prefers-color-scheme: dark) {
